Fixed Overflow

--- a/src/Home.css
+++ b/src/Home.css
@@ -352,7 +352,7 @@
         .skillItem {
             border-radius: 6px;
             padding: 10px 0;
-            background-color: #e9e9e9;
+            background-color: #f5f5f5;
             color: #2A90A9;
             font-weight: bold;
             max-width: 170px;
@@ -410,7 +410,7 @@
         
         .upperCaption {
             color: #393D3F;
-            opacity: 25%;
+            opacity: 30%;
             text-transform: uppercase;
             font-weight: bold;
             font-size: 18px;
